# pyhbm

./: .gitignore  README.md  invariant_manifold.py  plan.md  plan_bifurcation_detection.md  pyproject.toml  tracking_bifurcations.md
.github/workflows/: ci.yml
examples/2dof_duffing/: dynamical_system.py  main.py
examples/StEP_beam/: dynamical_system.py  main.py
examples/StEP_single_element/: dynamical_system.py  main.py
examples/arch_beam_ssm/: dynamical_system.py  main.py  postprocessing.py  results.out
examples/arch_bem_ssm/: dynamical_system.py  edit  main.py  main_HBM_performance_test.py  plot_HBM_performance.py  plot_MatCont_performance.py  plot_fixed_smax  plot_fixed_tolerance.py
examples/duffing/: analytical_computation_of_residue_and_jacobian_for_harmonics_1_3.ipynb  dynamical_system.py  main.py
examples/duffing_conservative_autonomous/: dynamical_system.py  main.py
examples/duffing_forced_nonautonomous/: dynamical_system.py  main.py
examples/duffing_forced_nonautonomous_normal/: main.py
examples/linear_frequency_response/: dynamical_system.py  main.py
examples/parametric_arch_ssm/: dynamical_system.py  main.py  text.txt
examples/pendulum_forced_nonautonomous/: dynamical_system.py  main.py  results.out
src/: continuation.py  frequency_domain.py  pyhbm.py
src/numerical_continuation/: corrector_step.py  predictor_step.py
src/pyhbm/: __init__.py  core.py  dynamical_system.py  frequency_domain.py
src/pyhbm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyhbm/io/: __init__.py  plotting.py  (+1 more)
tests/: test_imports.py
(+44 files in other folders)
